# Workflow

./: .dockerignore  .gitattributes  .gitignore  .mcp.example.json  AGENTIC_SEARCH_RESEARCH.md  AGENTS.md  ARCHITECTURE_PLAN.md  BUILD_PREP.md  CLAUDE.md  CLAUDE_LEAD_OPS.md  CODEX.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  IMPLEMENTATION_SUMMARY_PHASE_3.md  IMPORT_COMPATIBILITY.md  INDEX.md  LAUNCH_PROMPT.md  LICENSE  PHASE_3_5_6_IMPLEMENTATION.md  PLAN.md  README.md  REFLECTION.md  RESTRUCTURE_PLAN.md  SKILLS_AUDIT.md  STATUS.md  STEERING.md  SUCCESSION.md  VAULT_GUIDE.md  _PURPOSE.md  auto_ship_ship_classes.yaml  chatgpt-app-submission.json  claim_check_session_d.json  create-desktop-shortcut.bat  fantasy_author.pyw  pyproject.toml  run_gpt_tests.py  start-universe-server.bat  start-universe-server.vbs  start-workflow-server.bat  (+4 more)
packaging/claude-plugin/plugins/workflow-universe-server/runtime/: bootstrap.py  pyproject.toml  requirements.txt  server.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/fantasy_author/: universe_server.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/: __init__.py  __main__.py  _rename_compat.py  author_server.py  auto_ship.py  auto_ship_ledger.py  auto_ship_pr.py  bid_execution_log.py  bid_ledger.py  branch_tasks.py  branch_versions.py  branches.py  bug_investigation.py  cloud_worker.py  cloud_worker_healthcheck.py  contribution_events.py  credential_vault.py  daemon_brain.py  daemon_memory.py  daemon_registry.py  daemon_server.py  daemon_wiki.py  directory_server.py  discovery.py  dispatcher.py  domain_registry.py  enrichment_signals.py  exceptions.py  git_bridge.py  graph_compiler.py  idempotency.py  identity.py  mcp_server.py  node_eval.py  notes.py  persona.py  phase_vocab.py  protocols.py  registry.py  rollback.py  (+10 more)
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/api/: __init__.py  auto_ship_actions.py  branches.py  engine_helpers.py  evaluation.py  extensions.py  extensions_leaderboard_actions.py  helpers.py  market.py  prompts.py  quality_leaderboard.py  runs.py  runtime_ops.py  selector_dispatch.py  status.py  universe.py  wiki.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/attribution/: __init__.py  calc.py  schema.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/auth/: __init__.py  middleware.py  provider.py  wellknown.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/bid/: __init__.py  node_bid.py  settlements.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/catalog/: backend.py  serializer.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/checkpointing/: __init__.py  sqlite_saver.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/constraints/: __init__.py  constraint_surface.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/context/: compaction.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/desktop/: __init__.py  create_shortcut.py  icon_gen.py  launcher.py  notifications.py  tray.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/effectors/: __init__.py  authority.py  github_merge.py  github_pr.py  github_read.py  github_search.py  validate_patch.py  windows_desktop.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/evaluation/: __init__.py  editorial.py  loop_rubric.py  process.py  scenario_runner.py  structural.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/executors/: __init__.py  node_bid.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/gate_events/: __init__.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/gates/: actions.py  schema.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/host_pool/: bid_poller.py  client.py  registration.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/ingestion/: __init__.py  canon_io.py  canon_names.py  core.py  extractors.py  image_extractor.py  indexer.py  video_extractor.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/judges/: __init__.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/knowledge/: entity_extraction.py  hipporag.py  knowledge_graph.py  leiden.py  raptor.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/learning/: __init__.py  criteria_discovery.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/memory/: __init__.py  archival.py  consolidation.py  core.py  episodic.py  ingestion.py  manager.py  project.py  promises.py  reflexion.py  scoping.py  tools.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/outcomes/: __init__.py  evaluators.py  schema.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/payments/: __init__.py  actions.py  escrow.py  identifiers.py  schema.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/planning/: dome_expansion.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/producers/: branch_task.py  goal_pool.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/providers/: base.py  call.py  claude_provider.py  codex_provider.py  gemini_provider.py  grok_provider.py  groq_provider.py  ollama_provider.py  quota.py  router.py
packaging/claude-plugin/plugins/workflow-universe-server/runtime/workflow/resolution/: __init__.py
packaging/mcpb/: README.md  build_bundle.py  manifest.json  pyproject.toml  server.py
(+2278 files in other folders)
