[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflow"
version = "0.1.0"
description = "Goal-agnostic daemon engine — summon it, bind it to a domain, let it drive. MCP interface for any chatbot."
requires-python = ">=3.11"
authors = [
    {name = "Jonathan", email = "jonathan@example.com"}
]
dependencies = [
    # Core orchestration
    "langgraph>=0.4,<0.5",
    "langgraph-checkpoint-sqlite>=3.0,<4.0",
    "langchain-core>=0.3,<0.4",

    # Vector & KG storage
    "lancedb>=0.15,<1.0",
    "igraph>=0.11,<1.0",

    # Symbolic solving & planning
    "clingo>=5.7,<6.0",

    # Desktop app
    "pystray>=0.19,<1.0",
    "pillow>=10.0",

    # NLP (entity extraction, coreference)
    "spacy>=3.7,<4.0",

    # Async file I/O
    "aiofiles>=24.1",

    # Robust JSON parsing for LLM output
    "json-repair>=0.30",

    # Retry with backoff for provider calls
    "tenacity>=9.0,<10.0",
]

[project.scripts]
workflow-cli = "workflow.__main__:main"
workflow-mcp = "workflow.mcp_server:main"
workflow-universe-server = "workflow.universe_server:main"

[project.gui-scripts]
workflow = "workflow.desktop.launcher:main"

[project.optional-dependencies]
desktop = ["Pillow>=10.0", "pystray>=0.19"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "pytest-cov>=5.0",
    "httpx>=0.24",
    "fastapi>=0.115",
]
gemini = [
    "google-genai>=1.0",
]
grok = [
    "openai>=1.0",
]
groq = [
    "groq>=0.9",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
mcp = [
    "fastmcp>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fantasy_author", "workflow", "domains"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["fantasy_author_original"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# Embeds JavaScript DOM-scanning strings (regexes, selectors) that can't
# be reflowed without breaking the JS. Plus a PowerShell one-liner in the
# module docstring that users copy-paste verbatim.
"scripts/claude_chat.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: stress/race tests; opt-in via `pytest -m slow`",
]
